data/raw_logs/lexical/lex_13.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_13.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_13.c:1:24: error: expected ',' or ';' before '!' token
    1 | int main() { int x = 5 ! 2; }
      |                        ^
